--- a/resources/business-hours-admin.css
+++ b/resources/business-hours-admin.css
@@ -18,3 +18,22 @@
 	line-height   : 16px;
 	font-size     : 12px;
 }
+
+.bh-form input[type="text"] {
+	font-size          : 15px;
+	font-family        : sans-serif;
+	padding            : 7.5px;
+	width              : 225px;
+	border             : 1px solid #aaa;
+	background         : #fff;
+	outline            : 0;
+	color              : #666;
+	border-radius      : 3px;
+	-moz-box-shadow    : inset 0 1px 2px rgba(0, 0, 0, 0.15), transparent 0 0 0;
+	-webkit-box-shadow : inset 0 1px 2px rgba(0, 0, 0, 0.15), transparent 0 0 0;
+	box-shadow         : inset 0 1px 2px rgba(0, 0, 0, 0.15), transparent 0 0 0;
+}
+
+.bh-form textarea {
+	resize : none
+}
