More work over exceptions admin UI
Updates #3

--- a/resources/business-hours-admin.css
+++ b/resources/business-hours-admin.css
@@ -122,6 +122,10 @@
 	clear   : both;
 }
 
+#exception_0 {
+	display : none;
+}
+
 @media screen and (max-width:690px) {
 	.bh_main_container {
 		float : none;
